# reci-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: auth.py  database.py  main.py
src/models/: recipies.py  users.py
src/routers/: auth.py  recipies.py
src/schemas/: recipies.py  users.py
src/scraper/: scraper.py
src/util/: auth.py  database.py  enums.py
