[tool.poetry]
name = "reci-py"
version = "0.1.0"
description = ""
authors = ["Maximilian Asam <maximilian.asam1@hs-augsburg.de>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.95.0" }
sqlalchemy = "^2.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"

[tool.poetry.scripts]
dev = "src.main:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
